aster/tests/fail/missing_type.as
# Expected: compile failure (locals must have an explicit type or an initializer)

def main() returns i32
    var x
    return 0
